--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,17 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
+    id "kotlin-android-extensions"
 }
+
 apply plugin: 'kotlin-android'
 
 android {
     compileSdk 32
+
+    buildFeatures{
+        viewBinding true
+    }
 
     defaultConfig {
         applicationId "com.TRDZ.task04"
